add feature mapper dynamic jdbctemplate